# MODULAR-RAG-MCP-SERVER

./: .gitignore  DEV_SPEC.md  README.md  main.py  pyproject.toml
.claude/skills/checkpoint/: SKILL.md
.claude/skills/dev-workflow/: SKILL.md
.claude/skills/progress-tracker/: SKILL.md
.claude/skills/spec-sync/: sync_spec.py
.venv312/: pyvenv.cfg
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  metadata_enrichment.txt  rerank.txt
scripts/: ingest.py  query.py
src/: __init__.py
src/core/: __init__.py  settings.py  types.py
src/core/query_engine/: __init__.py  dense_retriever.py  fusion.py  hybrid_search.py  query_processor.py  reranker.py  sparse_retriever.py
src/core/response/: __init__.py  citation_generator.py  multimodal_assembler.py  response_builder.py
src/core/trace/: __init__.py  trace_context.py
src/ingestion/: __init__.py  pipeline.py
src/ingestion/chunking/: __init__.py  document_chunker.py
src/ingestion/embedding/: __init__.py  batch_processor.py  dense_encoder.py  sparse_encoder.py
src/ingestion/storage/: __init__.py  bm25_indexer.py  image_storage.py  vector_upserter.py
src/ingestion/transform/: __init__.py  base_transform.py  chunk_refiner.py  image_captioner.py  metadata_enricher.py
src/libs/: __init__.py
src/libs/embedding/: __init__.py  azure_embedding.py  (+6 more)
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/: conftest.py
tests/fixtures/: __init__.py  generate_complex_pdf.py  noisy_chunks.json
tests/integration/: test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_ingestion_pipeline.py  test_mcp_server.py  test_pdf_loader_integration.py  test_query_pipeline.py
tests/unit/: test_azure_vision_llm.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_embedding_factory.py  test_embedding_providers_smoke.py  test_file_integrity.py  test_fusion_rrf.py  test_get_document_summary.py  test_hybrid_search.py  test_image_captioner_fallback.py  test_image_captioner_with_fixtures.py  test_image_storage.py  test_list_collections.py  test_llm_factory.py  test_llm_providers_smoke.py  test_llm_reranker.py  test_loader_pdf_contract.py  test_local_embedding.py  test_metadata_enricher_contract.py  test_multimodal_assembler.py  test_ollama_embedding.py  test_ollama_llm.py  test_query_processor.py  test_qwen_embedding.py  test_qwen_vision_llm.py  test_recursive_splitter_lib.py  test_reranker_factory.py  test_reranker_fallback.py  test_response_builder.py  test_smoke_imports.py  test_sparse_encoder.py  test_sparse_retriever.py  (+4 more)
(+42 files in other folders)
