[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "Modular RAG MCP Server - 可插拔的检索增强生成服务"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
# For development: packages are installed from src/ directory
# Using find_packages to discover all modules (mcp_server, core, ingestion, libs, observability)
packages = ["src/mcp_server", "src/core", "src/ingestion", "src/libs", "src/observability"]
authors = [
    {name = "Project Team"}
]
keywords = ["rag", "mcp", "retrieval", "llm", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 可选依赖（按需安装）
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# LLM Providers
llm = [
    "openai>=1.0.0",
    "azure-openai>=1.0.0",
    "ollama>=0.1.0",
]

# Embedding Providers
embedding = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
]

# Vector Stores
vectorstore = [
    "chromadb>=0.4.0",
]

# Document Processing
document = [
    "markitdown>=0.0.1",
    "pypdf>=3.0.0",
]

# MCP Server
mcp = [
    "mcp>=0.9.0",
]

# Observability
observability = [
    "streamlit>=1.0.0",
]

# Evaluation
evaluation = [
    "ragas>=0.1.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# All optional deps
all = [
    "modular-rag-mcp-server[llm]",
    "modular-rag-mcp-server[embedding]",
    "modular-rag-mcp-server[vectorstore]",
    "modular-rag-mcp-server[document]",
    "modular-rag-mcp-server[mcp]",
    "modular-rag-mcp-server[observability]",
    "modular-rag-mcp-server[evaluation]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.edit]
# Editable install requires src/ to be in Python path
path = "src"
